Initialize 1.12.1