@@ -1,8 +1,6 @@
 
 package net.mcreator.administratorauthorization.item;
 
-import com.google.common.collect.ImmutableMultimap;
-import com.google.common.collect.Multimap;
 import net.mcreator.administratorauthorization.Interfaces.PlayerAccess;
 import net.mcreator.administratorauthorization.configuration.AADestroyerConfiguration;
 import net.mcreator.administratorauthorization.procedures.DestroyRouterProcedure;
@@ -13,9 +11,8 @@ import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.InteractionResultHolder;
 import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.EquipmentSlotGroup;
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.entity.ai.attributes.AttributeModifier;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.player.Player;
@@ -23,6 +20,7 @@ import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Rarity;
 import net.minecraft.world.item.UseAnim;
+import net.minecraft.world.item.component.ItemAttributeModifiers;
 import net.minecraft.world.item.context.UseOnContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
@@ -30,21 +28,21 @@ import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
+import net.neoforged.api.distmarker.Dist;
+import net.neoforged.api.distmarker.OnlyIn;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
 
 public class RealityDestroyerItem extends Item {
-    private final Multimap<Attribute, AttributeModifier> reality_destroyer;
+    private final ItemAttributeModifiers reality_destroyer;
 
     public RealityDestroyerItem() {
         super(new Properties().stacksTo(1).fireResistant().rarity(Rarity.EPIC));
-        ImmutableMultimap.Builder<Attribute, AttributeModifier> builder = ImmutableMultimap.builder();
-        builder.put(Attributes.ATTACK_DAMAGE, new AttributeModifier(BASE_ATTACK_DAMAGE_UUID, "Item modifier", 1023d, AttributeModifier.Operation.ADDITION));
-        builder.put(Attributes.ATTACK_SPEED, new AttributeModifier(BASE_ATTACK_SPEED_UUID, "Item modifier", -2.4, AttributeModifier.Operation.ADDITION));
+        ItemAttributeModifiers.Builder builder = ItemAttributeModifiers.builder();
+        builder.add(Attributes.ATTACK_DAMAGE, new AttributeModifier(BASE_ATTACK_DAMAGE_ID, 1023d, AttributeModifier.Operation.ADD_VALUE), EquipmentSlotGroup.MAINHAND);
+        builder.add(Attributes.ATTACK_SPEED, new AttributeModifier(BASE_ATTACK_SPEED_ID, -2.4, AttributeModifier.Operation.ADD_VALUE), EquipmentSlotGroup.MAINHAND);
         this.reality_destroyer = builder.build();
     }
 
@@ -60,10 +58,6 @@ public class RealityDestroyerItem extends Item {
         return 4f;
     }
 
-    public @NotNull Multimap<Attribute, AttributeModifier> getDefaultAttributeModifiers(@NotNull EquipmentSlot equipmentSlot) {
-        return equipmentSlot == EquipmentSlot.MAINHAND ? this.reality_destroyer : super.getDefaultAttributeModifiers(equipmentSlot);
-    }
-
     @Override
     @OnlyIn(Dist.CLIENT)
     public boolean isFoil(@NotNull ItemStack itemstack) {
@@ -71,13 +65,17 @@ public class RealityDestroyerItem extends Item {
     }
 
     @Override
-    public boolean isCorrectToolForDrops(@NotNull BlockState state) {
+    public boolean isCorrectToolForDrops(@NotNull ItemStack stack, @NotNull BlockState state) {
         return true;
     }
 
     @Override
+    public @NotNull ItemAttributeModifiers getDefaultAttributeModifiers(@NotNull ItemStack stack) {
+        return reality_destroyer;
+    }
+
+    @Override
     public boolean hurtEnemy(@NotNull ItemStack itemstack, @NotNull LivingEntity entity, @NotNull LivingEntity sourceentity) {
-        boolean retval = super.hurtEnemy(itemstack, entity, sourceentity);
         if (AADestroyerConfiguration.RANGED.get()) {
             double range = AADestroyerConfiguration.RADIUS.get();
             AABB aabb = new AABB(entity.position().subtract(range, 0, range), entity.getEyePosition().subtract(-range, -1, -range));
@@ -88,7 +86,7 @@ public class RealityDestroyerItem extends Item {
         } else {
             DestroyRouterProcedure.execute(entity, sourceentity, sourceentity.level());
         }
-        return retval;
+        return true;
     }
 
     @Override
@@ -102,7 +100,7 @@ public class RealityDestroyerItem extends Item {
             if (AADestroyerConfiguration.ACCEPT_MULTIPLE.get()) {
                 target.forEach(victim -> DestroyRouterProcedure.execute(victim, entity, world));
             } else {
-                DestroyRouterProcedure.execute(target.get(0), entity, world);
+                DestroyRouterProcedure.execute(target.getFirst(), entity, world);
             }
         }
         return ar;
@@ -127,7 +125,7 @@ public class RealityDestroyerItem extends Item {
     }
 
     @Override
-    public boolean canDisableShield(ItemStack stack, ItemStack shield, LivingEntity entity, LivingEntity attacker) {
+    public boolean canDisableShield(@NotNull ItemStack stack, @NotNull ItemStack shield, @NotNull LivingEntity entity, @NotNull LivingEntity attacker) {
         return true;
     }
 
